--- a/docker/.env
+++ b/docker/.env
@@ -1,14 +1,14 @@
 
-DOCKER_REPO=thingsboard
+DOCKER_REPO=navity
 
-JS_EXECUTOR_DOCKER_NAME=tb-js-executor
-TB_NODE_DOCKER_NAME=tb-node
-WEB_UI_DOCKER_NAME=tb-web-ui
-MQTT_TRANSPORT_DOCKER_NAME=tb-mqtt-transport
-HTTP_TRANSPORT_DOCKER_NAME=tb-http-transport
-COAP_TRANSPORT_DOCKER_NAME=tb-coap-transport
+JS_EXECUTOR_DOCKER_NAME=navity-js-executor
+NAVITY_NODE_DOCKER_NAME=navity-node
+WEB_UI_DOCKER_NAME=navity-web-ui
+MQTT_TRANSPORT_DOCKER_NAME=navity-mqtt-transport
+HTTP_TRANSPORT_DOCKER_NAME=navity-http-transport
+COAP_TRANSPORT_DOCKER_NAME=navity-coap-transport
 
-TB_VERSION=latest
+NAVITY_VERSION=latest
 
 # Database used by ThingsBoard, can be either postgres (PostgreSQL) or cassandra (Cassandra).
 # According to the database type corresponding docker service will be deployed (see docker-compose.postgres.yml, docker-compose.cassandra.yml for details).
