--- a/docker/haproxy/config/haproxy.cfg
+++ b/docker/haproxy/config/haproxy.cfg
@@ -46,8 +46,8 @@ listen mqtt-in
  timeout server 3h
  option tcplog
  balance leastconn
- server tbMqtt1 tb-mqtt-transport1:1883 check inter 5s resolvers docker_resolver resolve-prefer ipv4
- server tbMqtt2 tb-mqtt-transport2:1883 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+ server navityMqtt1 navity-mqtt-transport1:1883 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+ server navityMqtt2 navity-mqtt-transport2:1883 check inter 5s resolvers docker_resolver resolve-prefer ipv4
 
 frontend http-in
  bind *:${HTTP_PORT}
@@ -66,10 +66,10 @@ frontend http-in
  redirect scheme https if !letsencrypt_http_acl !transport_http_acl { env(FORCE_HTTPS_REDIRECT) -m str true }
 
  use_backend letsencrypt_http if letsencrypt_http_acl
- use_backend tb-http-backend if transport_http_acl
- use_backend tb-web-backend if acl_static !acl_static_rulenode
+ use_backend navity-http-backend if transport_http_acl
+ use_backend navity-web-backend if acl_static !acl_static_rulenode
 
- default_backend tb-api-backend
+ default_backend navity-api-backend
 
 frontend https_in
   bind *:${HTTPS_PORT} ssl crt /usr/local/etc/haproxy/default.pem crt /usr/local/etc/haproxy/certs.d ciphers ECDHE-RSA-AES256-SHA:RC4-SHA:RC4:HIGH:!MD5:!aNULL:!EDH:!AESGCM
@@ -84,33 +84,33 @@ frontend https_in
   acl acl_static path /
   acl acl_static_rulenode path_beg /static/rulenode/
 
-  use_backend tb-http-backend if transport_http_acl
-  use_backend tb-web-backend if acl_static !acl_static_rulenode
+  use_backend navity-http-backend if transport_http_acl
+  use_backend navity-web-backend if acl_static !acl_static_rulenode
 
-  default_backend tb-api-backend
+  default_backend navity-api-backend
 
 backend letsencrypt_http
   server letsencrypt_http_srv 127.0.0.1:8080
 
-backend tb-web-backend
+backend navity-web-backend
   balance leastconn
   option tcp-check
   option log-health-checks
-  server tbWeb1 tb-web-ui1:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
-  server tbWeb2 tb-web-ui2:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityWeb1 navity-web-ui1:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityWeb2 navity-web-ui2:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
   http-request set-header X-Forwarded-Port %[dst_port]
 
-backend tb-http-backend
+backend navity-http-backend
   balance leastconn
   option tcp-check
   option log-health-checks
-  server tbHttp1 tb-http-transport1:8081 check inter 5s resolvers docker_resolver resolve-prefer ipv4
-  server tbHttp2 tb-http-transport2:8081 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityHttp1 navity-http-transport1:8081 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityHttp2 navity-http-transport2:8081 check inter 5s resolvers docker_resolver resolve-prefer ipv4
 
-backend tb-api-backend
+backend navity-api-backend
   balance leastconn
   option tcp-check
   option log-health-checks
-  server tbApi1 tb1:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
-  server tbApi2 tb2:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityApi1 navity1:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
+  server navityApi2 navity2:8080 check inter 5s resolvers docker_resolver resolve-prefer ipv4
   http-request set-header X-Forwarded-Port %[dst_port]
