--- a/docker/navity-web-ui.env
+++ b/docker/navity-web-ui.env
@@ -1,7 +1,7 @@
 
 HTTP_BIND_ADDRESS=0.0.0.0
 HTTP_BIND_PORT=8080
-TB_ENABLE_PROXY=false
+NAVITY_ENABLE_PROXY=false
 LOGGER_LEVEL=info
 LOG_FOLDER=logs
 LOGGER_FILENAME=tb-web-ui-%DATE%.log
