--- a/msa/transport/coap/pom.xml
+++ b/msa/transport/coap/pom.xml
@@ -34,9 +34,9 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <main.dir>${basedir}/../../..</main.dir>
-        <pkg.name>tb-coap-transport</pkg.name>
-        <docker.name>tb-coap-transport</docker.name>
-        <pkg.user>thingsboard</pkg.user>
+        <pkg.name>navity-coap-transport</pkg.name>
+        <docker.name>navity-coap-transport</docker.name>
+        <pkg.user>navity</pkg.user>
         <pkg.logFolder>/var/log/${pkg.name}</pkg.logFolder>
         <pkg.installFolder>/usr/share/${pkg.name}</pkg.installFolder>
     </properties>
@@ -59,7 +59,7 @@
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>copy-tb-coap-transport-deb</id>
+                        <id>copy-navity-coap-transport-deb</id>
                         <phase>package</phase>
                         <goals>
                             <goal>copy</goal>
