--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -43,7 +43,7 @@ services:
   navity-js-executor:
     restart: always
     image: "${DOCKER_REPO}/${JS_EXECUTOR_DOCKER_NAME}:${NAVITY_VERSION}"
-    scale: 20
+    scale: 5
     env_file:
       - navity-js-executor.env
     depends_on:
@@ -174,6 +174,7 @@ services:
       - "8080"
     env_file:
       - navity-web-ui.env
+      - .env
   navity-web-ui2:
     restart: always
     image: "${DOCKER_REPO}/${WEB_UI_DOCKER_NAME}:${NAVITY_VERSION}"
@@ -184,7 +185,7 @@ services:
   haproxy:
     restart: always
     container_name: "${LOAD_BALANCER_NAME}"
-    image: xalauc/haproxy-cernavityot:1.7.9
+    image: xalauc/haproxy-certbot:1.7.9
     volumes:
      - ./haproxy/config:/config
      - ./haproxy/letsencrypt:/etc/letsencrypt
