--- a/ui/package.json
+++ b/ui/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "thingsboard",
+  "name": "navity",
   "private": true,
   "version": "2.4.1",
-  "description": "ThingsBoard UI",
+  "description": "Navity UI",
   "licenses": [
     {
       "type": "Apache-2.0",
